# speech2text

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION.md  ELECTRON_README.md  GITHUB_RELEASE.md  LICENSE  MSI_INSTALLER.md  README.md  RELEASE_GUIDE.md  build-electron.bat  build.bat  build_all.bat  build_exe.py  build_msi.bat  build_msi.py  build_msi_fixed.py  build_msi_simple.py  create_installer.py  launcher.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  settings_dialog.py  setup_instructions.txt  setup_msi.py  speech2text.spec  speech_to_text_app.py  test-ui.html  webpack.config.js  webpack.main.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: README.md
electron/: main.js  preload.js
renderer/: index.html
renderer/src/js/: main.js
renderer/src/styles/: main.css
src/: __init__.py
src/speech2text/: __init__.py  animations.py  audio_monitor.py  auto_paste.py  global_hotkey.py  main.py  modern_settings_dialog.py  modern_speech_app.py  settings.py  settings_dialog.py  sound_notifications.py  speech_to_text_app.py  theme.py  theme_old.py
tests/: README.md  test_app.py  test_hotkey.py  test_settings.py  test_transcription_settings.py
