[project]
name = "speech2text"
version = "0.1.0"
description = "A modern desktop application for real-time speech-to-text transcription using OpenAI Whisper API"
readme = "README.md"
authors = [
    {name = "Speech2Text Contributors", email = "contributors@speech2text.dev"},
]
maintainers = [
    {name = "Speech2Text Contributors", email = "contributors@speech2text.dev"},
]
license = "MIT"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Desktop Environment",
]
keywords = [
    "speech-to-text",
    "transcription",
    "whisper",
    "openai",
    "desktop-app",
    "audio-processing",
    "gui",
    "tkinter",
]
dependencies = [
    "openai>=1.0.0",
    "pyaudio>=0.2.11",
    "cryptography>=41.0.0",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyinstaller>=6.14.2",
    "pyperclip>=1.9.0",
    "darkdetect>=0.8.0",
    "pywinstyles>=1.8",
    "cx-freeze>=8.3.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/speech2text"
"Bug Reports" = "https://github.com/yourusername/speech2text/issues"
"Source" = "https://github.com/yourusername/speech2text"
"Documentation" = "https://github.com/yourusername/speech2text#readme"
"Contributing" = "https://github.com/yourusername/speech2text/blob/main/CONTRIBUTING.md"
"Changelog" = "https://github.com/yourusername/speech2text/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
build = [
    "cx_Freeze>=6.15.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speech2text"]

[project.scripts]
speech2text = "speech2text.main:main"

[project.gui-scripts]
speech2text-gui = "speech2text.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
